--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Home page{% endblock %}
 {% block content %}
- <p> Test</p>
+<h1>Toz vitaj</h1>
 {% endblock %}
